<resources>
    <string name="app_name">BookRyde</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="google_maps_key">AIzaSyAyLVyt4GVRC9n_tIsbIfurzjE1oSqTapg</string>
    <string name="login_with">login with</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="signup"><u>SIGNUP</u></string>
    <string name="no_internet">Please check your internet connection and try again</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="email_pattren">Please enter valid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_validation">Password length should be 8 character</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="colon">:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_country">Select Country</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="type_your_email">Type your email</string>
    <string name="send">send</string>
    <string name="Verifiration">Verification</string>
    <string name="please_enter_email_for_reset_password">Please enter email address for reset password:</string>
    <string name="book_ride">Book ride</string>
    <string name="share_ride">Share ride</string>
    <string name="cab_booking">CAB BOOKING</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="wallet">Wallet</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="support">Support</string>
    <string name="Refer_a_friend">Refer a friend</string>
    <string name="logout">Logout</string>
    <string name="contactus">Contact Us</string>
    <string name="about_app">About App</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="ride_later">Ride Later</string>
    <string name="change_password">Change Password</string>
    <string name="emaergency_contact">Emergency Contact</string>
    <string name="refer_afirend_text">Invite your friend by sharing invite code and referral amount</string>
    <string name="share_invite_code">Share your Invite code</string>
    <string name="share_via_facebook">Share Via Facebook</string>
    <string name="share_via_twitter">Share Via Twitter</string>
    <string name="share_via_email">Share Via Email</string>
    <string name="share_via_message">Share Via Message</string>
    <string name="share_via_whatsapp">Share Via Whatsapp</string>
    <string name="refer_a_friend">Refer A Friend</string>
    <string name="email_validation">Please enter Email Address</string>
    <string name="name_length_validation">Full Name length should be minimum 3</string>
    <string name="register_username_length">Username length should be minimum 3</string>
    <string name="new_password_validation">Password length should be minimum 8</string>
    <string name="comfirm_password_validation">Please enter Confirm Password</string>
    <string name="comfirm_password_length">Confirm Password length should be minimum 8</string>
    <string name="confirm_password_same_as_password">Confirm Password should be same as password</string>
    <string name="mobile_no_digit">mobile no should be 10 digit</string>
    <string name="camera_permission_error">Please allow permission to access camera</string>
    <string name="gallery_permission_error">Please allow permission to access gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">cancel</string>
    <string name="cancel">cancel</string>
    <string name="Receive">DO Not Receive </string>
    <string name="Phone_Verification">Phone Verification</string>
    <string name="Enter_your_otp">Enter Your OTP here</string>
    <string name="OTP">   RESEND </string>
    <string name="dont_recevie">Don\'t Receive  OTP?    </string>
      <string name="setcode">plz reset code</string>


    <string name="lorap_lipsm">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
        has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type
        and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum .10.33 from "de Finibus Bonorum et Malorum" by Cicero are also
        reproduced in their exact original form, accompanied by English versions from the 1914 translation by H.
        Rackham.
    </string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">ok</string>
    <string name="booking_history">Booking History</string>
    <string name="booking_id">Booking Id</string>
    <string name="ride_now">Ride Now</string>
    <string name="your_loaction">Your Location</string>
    <string name="book_now">Book Now</string>
    <string name="reset_your_password">Reset Your Password?</string>
    <string name="please_enter_new_password">Please enter new Password :</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_firstname">Please enter first name</string>
    <string name="firstname_validation">First name length should be character</string>
    <string name="plaese_enter_last_name">Please enter last name</string>
    <string name="plaese_enter_confirm_password">Please enter confirm password</string>
    <string name="confirm_password_validation">Confirm Password length should be 8 character</string>
    <string name="change_your_password">Change your Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
</resources>
