<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                style="@style/scrollViewStyle"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center"
                tools:context=".User.LoginActivity">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_margin="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:background="@drawable/login_background"
                    android:orientation="vertical">
                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                    <EditText
                            style="@style/Edittext"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:layout_marginTop="10dp"
                            android:id="@+id/edtEmail"/>
                    <ImageView android:layout_width="28dp"
                               android:layout_height="28dp"
                               android:src="@drawable/email"
                               android:layout_margin="8dp"
                               android:layout_alignParentEnd="true"/>
                </RelativeLayout>
                <View style="@style/viewstyle"/>
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            style="@style/Edittext"
                            android:hint="@string/password"
                            android:maxLength="16"
                            android:inputType="textPassword"
                            android:id="@+id/edtPassword"/>
                    <ImageView android:layout_width="26dp"
                               android:layout_height="26dp"
                               android:src="@drawable/ic_password"
                               android:layout_margin="8dp"
                               android:layout_alignParentEnd="true"/>
                </RelativeLayout>
                <View style="@style/viewstyle"/>
                <TextView
                        style="@style/buttonstyle"
                        android:layout_marginTop="40dp"
                        android:id="@+id/btnLogin"
                        android:text="@string/login"/>
                <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center_horizontal"
                        android:id="@+id/txxForgotPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:text="@string/forgot_password"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColor="@color/colorPrimary"
                          android:gravity="center"
                          android:layout_marginTop="10dp"
                          android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                          android:text="@string/or"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColor="@color/colorPrimary"
                          android:layout_marginTop="10dp"
                          android:gravity="center"
                          android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                          android:text="@string/login_with"/>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="10dp"
                              android:gravity="center">
                    <ImageView android:layout_width="45dp"
                               android:layout_height="45dp"
                               android:src="@drawable/ic_facebook"
                               android:id="@+id/imgFb"/>
                    <ImageView android:layout_width="45dp"
                               android:layout_height="45dp"
                               android:layout_marginStart="20dp"
                               android:src="@drawable/ic_email"
                               android:id="@+id/imgEmail"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textColor="@color/colorPrimary"
                              android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                              android:text="@string/dont_have_account"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_marginStart="4dp"
                              android:id="@+id/txtSignUp"
                              android:textColor="@color/colorPrimary"
                              android:layout_height="wrap_content"
                              android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                              android:text="@string/signup"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</layout>