<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_margin="20dp"
        tools:context=".User.ForgotPasswordActivity">
   <!-- <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content">
        <ImageView android:layout_width="@dimen/_30sdp"
                   android:src="@drawable/ic_forget_password"
                   android:layout_height="@dimen/_30sdp"/>-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="20dp"
                      android:padding="20dp"
                      android:orientation="vertical"
                      android:background="@drawable/ic_background"
                      android:layout_height="@dimen/_350sdp">
            <TextView android:layout_width="wrap_content"
                      android:text="@string/forgot_your_password"
                      android:layout_gravity="center_horizontal"
                      android:layout_margin="20dp"
                      android:textSize="@dimen/_22sdp"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent"
                      android:gravity="center_horizontal"
                      android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                      android:text="@string/please_enter_email_for_reset_password"
                      android:layout_height="wrap_content"/>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_height="wrap_content">
                <EditText
                        style="@style/Edittext"
                        android:id="@+id/edtEmail"
                        android:inputType="textEmailAddress"
                        android:hint="@string/type_your_email"/>
                <ImageView android:layout_width="28dp"
                           android:layout_height="28dp"
                           android:src="@drawable/email"
                           android:layout_margin="6dp"
                           android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View style="@style/viewstyle"/>
            <TextView
                    android:layout_marginTop="50dp"
                    android:text="@string/send"
                    android:id="@+id/btnSend"
                    style="@style/buttonstyle"/>
        </LinearLayout>
   <!-- </FrameLayout>-->
</RelativeLayout>
</layout>