<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                tools:context=".User.RegisterActivity">
           <!-- <ScrollView android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="@dimen/_420sdp"
            >-->
            <!--   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                   <de.hdodenhof.circleimageview.CircleImageView
                           android:id="@+id/img_user"
                           android:layout_width="@dimen/_50sdp"
                           android:layout_height="@dimen/_50sdp"
                           android:layout_centerHorizontal="true"
                           android:layout_marginStart="8dp"
                           android:background="@drawable/camera_background" />
                   <ImageView
                           android:id="@+id/img_add_profile"
                           android:layout_width="30dp"
                           android:layout_height="30dp"
                           android:layout_alignParentEnd="true"
                           android:layout_marginBottom="20dp"
                           android:src="@drawable/ic_camera"
                           android:visibility="visible" />
               </RelativeLayout>
   -->

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_420sdp"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:background="@drawable/ic_background">


                <LinearLayout android:layout_width="match_parent"
                              android:orientation="vertical" android:layout_height="wrap_content">

                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                        <EditText
                                style="@style/Edittext"
                                android:id="@+id/edtfirstName"
                                android:maxLength="32"
                                android:hint="@string/first_name"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:src="@drawable/ic_user"
                                   android:layout_margin="8dp"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                        <EditText
                                style="@style/Edittext"
                                android:id="@+id/edtlastName"
                                android:maxLength="32"
                                android:hint="@string/last_name"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:src="@drawable/ic_user"
                                   android:layout_margin="8dp"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                        <EditText
                                style="@style/Edittext"
                                android:id="@+id/edtEmail"
                                android:hint="@string/email"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:src="@drawable/email"
                                   android:layout_margin="8dp"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_marginTop="10dp"
                                    android:padding="2dp"
                                    android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_marginStart="8dp"
                                  android:id="@+id/txtgender"
                                  android:layout_height="wrap_content"
                                  android:textColor="@color/colorPrimary"
                                  android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                  android:text="@string/gender"/>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_marginStart="2dp"
                                  android:id="@+id/txtcolon"
                                  android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                  android:layout_height="wrap_content"
                                  android:textColor="@color/colorPrimary"
                                  android:layout_toEndOf="@+id/txtgender"
                                  android:text="@string/colon"/>
                        <RadioGroup android:layout_width="match_parent"
                                    android:layout_toEndOf="@id/txtcolon"
                                    android:weightSum="1"
                                    android:padding="2dp"
                                    android:orientation="horizontal" android:layout_height="wrap_content">
                            <RadioButton android:layout_width="20dp"
                                         android:layout_marginStart="14dp"
                                         android:layout_weight="0.5"
                                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                         android:text="@string/male"
                                         android:gravity="center_vertical"
                                         android:button="@drawable/gender_selection"
                                         android:layout_height="20dp"/>
                            <RadioButton android:layout_width="20dp"
                                         android:layout_weight="0.5"
                                         android:text="@string/female"
                                         android:gravity="center_vertical"
                                         android:button="@drawable/gender_selection"
                                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                         android:layout_height="20dp"/>
                        </RadioGroup>
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_marginTop="10dp"
                                    android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content"
                                  android:text="@string/select_country"
                                  android:layout_marginStart="8dp"
                                  android:textColor="@color/colorPrimary"
                                  android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                  android:layout_height="wrap_content"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:padding="4dp"
                                   android:src="@drawable/ic_down_arrow"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                        <EditText
                                style="@style/Edittext"
                                android:id="@+id/edtAddress"
                                android:maxLength="30"
                                android:hint="@string/address"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:src="@drawable/ic_address"
                                   android:layout_margin="8dp"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                        <EditText
                                style="@style/Edittext"
                                android:id="@+id/edtMobileNo"
                                android:maxLength="15"
                                android:hint="@string/mobile_no"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:src="@drawable/ic_mobile"
                                   android:layout_margin="8dp"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                        <EditText
                                style="@style/Edittext"
                                android:id="@+id/edtPassword"
                                android:maxLength="16"
                                android:hint="@string/password"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:src="@drawable/ic_password"
                                   android:layout_margin="8dp"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                        <EditText
                                style="@style/Edittext"
                                android:id="@+id/edtConfirmPassword"
                                android:maxLength="16"
                                android:hint="@string/confirm_password"/>
                        <ImageView android:layout_width="28dp"
                                   android:layout_height="28dp"
                                   android:src="@drawable/ic_password"
                                   android:layout_margin="8dp"
                                   android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <View style="@style/viewstyle"/>
                    <TextView
                            android:layout_marginTop="20dp"
                            android:text="@string/register"
                            style="@style/buttonstyle"/>
                </LinearLayout>
            </FrameLayout>
          <!--  </ScrollView>-->
        </LinearLayout>

</layout>