<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/_20sdp"
                        android:layout_height="wrap_content">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".User.ResetPasswordActivity">
                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/login_background">
                    <LinearLayout android:layout_width="match_parent"
                                  android:padding="@dimen/_20sdp"
                                  android:orientation="vertical"
                                  android:layout_marginTop="@dimen/_30sdp"
                                  android:layout_height="wrap_content">
                        <TextView android:layout_width="match_parent"
                                  android:gravity="center_horizontal"
                                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                  android:text="@string/change_your_password"
                                  android:layout_height="wrap_content"/>
                        <RelativeLayout android:layout_width="match_parent"
                                        android:layout_marginTop="@dimen/_24sdp"
                                        android:layout_height="wrap_content">
                            <EditText
                                    style="@style/Edittext"
                                    android:id="@+id/edtoldPassword"
                                    android:maxLength="16"
                                    android:hint="@string/old_password"/>
                            <ImageView android:layout_width="28dp"
                                       android:layout_height="28dp"
                                       android:src="@drawable/ic_password"
                                       android:layout_margin="8dp"
                                       android:layout_alignParentEnd="true"/>
                        </RelativeLayout>
                        <View style="@style/viewstyle"/>
                        <RelativeLayout android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                            <EditText
                                    style="@style/Edittext"
                                    android:id="@+id/edtnewPassword"
                                    android:maxLength="16"
                                    android:hint="@string/new_password"/>
                            <ImageView android:layout_width="28dp"
                                       android:layout_height="28dp"
                                       android:src="@drawable/ic_password"
                                       android:layout_margin="8dp"
                                       android:layout_alignParentEnd="true"/>
                        </RelativeLayout>
                        <View style="@style/viewstyle"/>
                        <RelativeLayout android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                            <EditText
                                    style="@style/Edittext"
                                    android:id="@+id/edtConfirmnewPassword"
                                    android:maxLength="16"
                                    android:hint="@string/confirm_password"/>
                            <ImageView android:layout_width="28dp"
                                       android:layout_height="28dp"
                                       android:src="@drawable/ic_password"
                                       android:layout_margin="8dp"
                                       android:layout_alignParentEnd="true"/>
                        </RelativeLayout>
                        <View style="@style/viewstyle"/>
                        <TextView
                                android:layout_marginTop="40dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:id="@+id/btnChangePassword"
                                android:text="@string/change_password"
                                style="@style/buttonstyle"/>
                    </LinearLayout>
                </RelativeLayout>

            </RelativeLayout>
            <ImageView android:layout_width="@dimen/_60sdp"
                       android:layout_height="@dimen/_60sdp"
                       android:src="@drawable/rest_password"
                       android:layout_centerHorizontal="true"
                       android:layout_gravity="center_horizontal"
                       android:id="@+id/imgpic"/>
        </RelativeLayout>
    </ScrollView>
</layout>